--- a/Projetos/projeto-login/login.css
+++ b/Projetos/projeto-login/login.css
@@ -5,17 +5,18 @@
 
 body {
     background-image: url('islandia-auroral-boreal-capa-e1572186890534.jpg');
-    background-position: center;
+    background-size: 350vh;
+    background-position: center center;
     background-repeat: no-repeat;
     color: #03A63C;
+
 }
 
 fieldset {
     margin: auto;
-    background-color: #0038248c;
+    background-color: #0038248f;
     width: 200px;
     padding: 10px;
-    padding-bottom: 10px;
 }
 
 header {
@@ -23,4 +24,12 @@ header {
     margin-top: 20px;
     width: 200px;
     padding: 10px;
+}
+
+footer {
+    text-align: center;
+}
+
+div {
+    back
 }
