--- a/Projetos/projeto-login/login.css
+++ b/Projetos/projeto-login/login.css
@@ -1,30 +1,145 @@
-* {
-    margin: 0%;
-    padding: 0%;
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
 body {
-    background-image: url('islandia-auroral-boreal-capa-e1572186890534.jpg');
-    background-size: 350vh;
-    background-position: center center;
-    background-repeat: no-repeat;
-    color: #03A63C;
+    margin: 0%;
+    font-family: 'Noto Sans', sans-serif;
 }
 
-fieldset {
-    margin: auto;
-    background-color: #003824a4;
-    width: 200px;
+.main-login {
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
     padding: 10px;
+    background-color: #201b2c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-header {
-    margin: auto;
-    margin-top: 20px;
-    text-align: center;
+.left-login {
+    width: 50vh;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-footer {
-    text-align: center;
+.left-login-image {
+    width: 20vw;
 }
 
+.left-login > h1 {
+    font-size: 3vw;
+    color: #77ffc0;
+}
+
+.right-login {
+    width: 50vh;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-login {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 50px;
+    background: #2f2841;
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px #00000056;
+}
+
+.card-login > h1 {
+    color: #00ff88;
+    font-weight: 800;
+    margin: 0;
+}
+
+.textfield {
+    width: 19vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.textfield > input {
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    background: #514869;
+    color:#f0ffffde;
+    font-size: 12pt;
+    box-shadow: 0px 10px 40px #00000056;
+    outline: none;
+    box-sizing: border-box;
+}
+
+.textfield > label {
+    color: #f0ffffde;
+    margin-bottom: 10px;
+}
+
+.textfield > input::placeholder {
+    color: #f0ffff94;
+}
+
+.btn-login {
+    width: 100%;
+    padding:  16px 0px;
+    margin: 25px;
+    border: none;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 3px;
+    color: #2b134b;
+    background: #00ff88;
+    cursor: pointer;
+    box-shadow: 0px 10px 40px -12px #00ff8052;
+}
+
+.cadastro {
+    color: #f0ffffde;
+    margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 950) {
+    .card-login{
+        width: 85%;
+    }
+}
+
+@media only screen and (max-width: 600) {
+    .main-login {
+        flex-direction: column;
+    }
+
+    .left-login > h1 {
+        display: none;
+    }
+
+    .left-login {
+        width: 100%;
+        height: auto;
+    }
+
+    .right-login {
+        width: 100%;
+        height: auto;
+    }
+
+    .left-login-image {
+        width: 50vh;
+    }
+
+    .card-login {
+        width: 90%;
+    }
+}
