--- a/Projetos/projeto-login/cadastro.css
+++ b/Projetos/projeto-login/cadastro.css
@@ -6,7 +6,6 @@ body {
 }
 
 .main-cadastro {
-    
     margin: auto;
     text-align: center;
     padding: 10px;
@@ -21,6 +20,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 10px;
 }
 
 .left-login-image {
@@ -87,6 +87,31 @@ body {
     color: #f0ffff94;
 }
 
+.selecione {
+    width: 60%;
+    border: 1px solid rgba(0, 0, 0, 0.384);
+    border-radius: 10px;
+    background: #514869;
+    color: #f0ffff94;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 15px 30px;
+}
+
+.tecnologia {
+    width: 100%;
+    padding-top: 10px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+textarea {
+    background: #514869;
+    color: #f0ffff94;
+    
+}
+
 .btn-cadastro {
     width: 100%;
     padding:  16px 0px;
@@ -100,6 +125,10 @@ body {
     background: #00ff88;
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #00ff8052;
+}
+
+.btn-cadastro:hover {
+    background-color: #77ffc0;
 }
 
 label {
