--- a/Projetos/projeto-xiaomi/xiaomi.css
+++ b/Projetos/projeto-xiaomi/xiaomi.css
@@ -115,7 +115,26 @@ main p {
 }
 
 main strong{
-    color: #AD5501;
+    color: #4b2800;
     font-weight: bold;
 }
 
+main a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #4b2800;
+    padding: 2px 6px;
+}
+
+main a:hover {
+    text-decoration: underline;
+    color: rgb(99, 58, 4);
+}
+
+footer{
+    background-color: #4b2800;
+    color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
