--- a/Projetos/projeto-loja/style.css
+++ b/Projetos/projeto-loja/style.css
@@ -12,7 +12,7 @@
     --cor2: #8C1F28;
     --cor3: #D92525;
     --cor4: #D92525;
-    --cor5: #044040;
+    --cor5: #400404;
 
     --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
     --fonte-destaque: 'Bebas Neue', cursive;
@@ -33,8 +33,8 @@ body {
 header {
     margin: auto;
     padding: 15px;
-    background-color: #8C1F28;
-    color: white;
+    background-color: var(--cor2);
+    color: rgb(255, 255, 255);
 }
 
 .search-box {
@@ -49,7 +49,7 @@ input.search-txt {
     height: 3vh;
     transform: translate(108%, -134%);
     justify-content: center;
-    border-radius: 50px;
+    border-radius: 10px;
     border-color: black;
     display: flex;
 }
@@ -60,8 +60,6 @@ input.search-txt {
     height: 3vh;
     transform: translate(100%, -116%);
     justify-content: center;
-    border-radius: 50px;
-    border-color: black;
 }
 
 .menu {
@@ -78,7 +76,7 @@ a {
 }
 
 a:hover {
-    padding: 5px;
+    padding: 10px;
     width: 100px;
     border-radius: 8px;
     transition: 0.2s;
@@ -86,11 +84,35 @@ a:hover {
     color: var(--cor1);
 }
 
-img.promoção {
+.lançamento h1{
+    text-align: center;
+    padding: 10px;
+    background-color: var(--cor1);
+}
+
+.promoção{
+    padding-left: 40px;
+    padding-top: 10px;
     
 }
 
+.promoção p {
+    text-align: center;
+    padding: 10px;
+    width: 17.5em;
+    height: 2em;
+    background-color: var(--cor1);
+}
 
+.promoção1 {
+    padding-left: 40px;
+    padding-top: 10px;
+}
 
-
-
+.promoção1 p{
+    text-align: center;
+    padding: 10px;
+    width: 17.5em;
+    height: 2em;
+    background-color: var(--cor1);
+}
