--- a/Projetos/projeto-login/login.css
+++ b/Projetos/projeto-login/login.css
@@ -58,6 +58,7 @@ body {
     color: #00ff88;
     font-weight: 800;
     margin: 0;
+    padding-bottom: 10px;
 }
 
 .textfield {
@@ -103,6 +104,10 @@ body {
     background: #00ff88;
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #00ff8052;
+}
+
+.btn-login:hover {
+    background-color: #77ffc0;
 }
 
 .cadastro {
