projeto redes sociais adicionado

--- a/Projetos/redes-sociais/style.css
+++ b/Projetos/redes-sociais/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-    background-image: url(background-2.jpg);
+    background-image: url(imagens/background-2.jpg);
     background-position: left center;
     background-size: cover;
     width: 100vw;
